<resources>
    <string name="app_name">Narzekaj</string>

    <string name="add_content_hint">Co cie dziś zdenerwowało?</string>
    <string name="add_hash_hint">#Tagi</string>

    <string name="add_commit">Dodaj</string>
    <string name="top_day">DZIENNIE</string>
    <string name="top_week">TYGODNIOWO</string>
    <string name="top_month">MIESIĘCZNIE</string>
    <string name="top_all">ZAWSZE</string>
    <string name="top_comments">KOMENTOWANE</string>

    <string name="search_hint">Szukaj</string>

    <string name="add_empty_content">Nie możesz dodać pustego postu</string>
    <string name="add_empty_tags">Dodaj przynajmniej 1 tag</string>

    <string name="tags_too_many">Nie możesz dodać więcej tagów</string>
    <string name="tags_duplicate"># jest już użyty</string>
    <string name="tags_invalid"># jest nieprawidłowy</string>

    <string name="comment_refresh">ODŚWIEŻ KOMENTARZE</string>
    <string name="comment_hint">Napisz komentarz&#8230;</string>
    <string name="comment_details_hint">Napisz odpowiedź&#8230;</string>
    <string name="add_comment_hint">Napisz co o tym myślisz</string>
    <string name="comment_invalid">Nie możesz dodać pustego komentarza</string>
    <string name="comment_too_long">Za długi komentarz</string>

    <string name="note_ellipsis">&#8230;</string>
    <string name="note_continue_reading"><font fgcolor='#efefef'> (Zobacz więcej)</font></string>

    <string name="comment_one">KOMENTARZ</string>
    <string name="comment_two">KOMENTARZE</string>
    <string name="comment_five">KOMENTARZY</string>

    <string name="replay_one">ODPOWIEDŹ</string>
    <string name="replay_two">ODPOWIEDZI</string>

    <string name="year_one">rok</string>
    <string name="year_two">lata</string>
    <string name="year_five">lat</string>

    <string name="month_one">miesiąc</string>
    <string name="month_two">miesiące</string>
    <string name="month_five">miesięcy</string>

    <string name="week_one">tydzień</string>
    <string name="week_two">tygodnie</string>
    <string name="week_five">tygodni</string>

    <string name="day_one">dzień</string>
    <string name="day_two">dni</string>

    <string name="hour_one">godzinę</string>
    <string name="hour_two">godziny</string>
    <string name="hour_five">godzin</string>

    <string name="minute_one">minutę</string>
    <string name="minute_two">minuty</string>
    <string name="minute_five">minut</string>

    <string name="second">kilka sekund</string>

    <string name="not_logged">Musisz być zalogowany, aby\nmóc to zrobić</string>
    <string name="login"><b>ZALOGUJ</b></string>

    <string name="dialog_title">Anulować komentarz?</string>
    <string name="dialog_content">Stracisz niezapisane dane!</string>
    <string name="dialog_confirm">TAK</string>
    <string name="dialog_cancel">NIE</string>

    <string name="add_comment_string">Napisz nowy komentarz</string>
    <string name="replay_comment_string">Odpowiedz na komentarz</string>

    <string name="report">Zgłoś</string>
    <string name="remove">Usuń</string>
    <string name="report_commited">Zgłoszenie zostało przyjęte, dziękujemy!</string>

    <string name="refresh">Załaduj posty</string>

    <string name="loading">Przygotowujemy to dla ciebie</string>
    <string name="adding_post">Twój post jest dodawany!</string>
    <string name="added_post">Twój post został dodany!</string>
    <string name="couldnt_add_post">Nie udało się dodać postu\nSpróbuj ponownie później!</string>
    <string name="couldnt_refresh">Nie udało się odświeżyć postów\nSpróbuj ponownie później!</string>
    <string name="couldnt_like_post">Nie udało się polubić postu\nSpróbuj ponownie później!</string>
    <string name="couldnt_unlike_post">Nie udało się odlubić postu\nSpróbuj ponownie później!</string>
    <string name="couldnt_like_comment">Nie udało się polubić komentarza\nSpróbuj ponownie później!</string>
    <string name="couldnt_unlike_comment">Nie udało się odlubić komentarza\nSpróbuj ponownie później!</string>

    <string name="comment_post_added">Twój komentarz został dodany!</string>
    <string name="comment_post_couldnt">Nie udało się dodać komentarza\nSpróbuj ponownie później!</string>
    <string name="comment_load_couldnt">Nie udało się załadować komentarzy\nSpróbuj ponownie później!</string>

    <string name="username_hint">Login</string>
    <string name="password_hint">Hasło</string>
    <string name="accept_rules">Akceptuję <u>Regulamin</u> i <u>Politykę Prywatności</u></string>
    <string name="create_account"><b>Utwórz konto</b></string>
    <string name="create_account_google">Zaloguj z Google</string>

    <string name="couldnt_login">Nie udało się zalogować\nSpróbuj ponownie innym sposobem, lub później!</string>

    <string name="no_internet">Brak połączenia z internetem!</string>
    <string name="comment">Skomentuj</string>

    <string name="posts_refresh">ODŚWIEŻ POSTY</string>
    <string name="no_more_posts">\nNiestety, nie ma już więcej postów\n</string>
    <string name="none_posts">\nNiestety, nie ma takich postów\n</string>
    <string name="none_posts_user">"\nNie dodałeś jeszcze żadnych postów\n</string>

    <string name="facebook_app_id">2084727258218611</string>
    <string name="fb_login_protocol_scheme">fb2084727258218611</string>

    <string name="login_text">ZALOGUJ</string>
    <string name="register_text">ZAREJESTRUJ</string>
    <string name="register_not_unique">Ten login jest już zajęty!</string>
    <string name="register_failed">Nie udało się zarejestrować\nSpróbuj ponownie później!</string>

    <string name="login_failed">Nie udało się zalogować\nSpróbuj ponownie później!</string>
    <string name="login_wrong_password">Podane hasło nie pasuje do tego konta!</string>

    <string name="username_too_short">Login musi być dłuższy niż 3 znaki!</string>
    <string name="password_too_short">Hasło musi być dłuższe niż 5 znaków!</string>
    <string name="checkbox_not_checked">Musisz zaakceptować regulamin!</string>

    <string name="failed">Serwer zrobił umcy-umcy i sie wywalił :(</string>
    <string name="success">Bumcy-bumcy i nie ma tego ziomulcy :)</string>

</resources>
