<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/main_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />

    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
            android:id="@+id/feed_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:visibility="visible" android:layout_below="@+id/navigation_feed_top"
            android:layout_centerInParent="true">

        <ImageView
                android:id="@+id/feed_refresh_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/icon_refresh_48dp"
                android:layout_marginBottom="32dp"
                android:layout_centerInParent="true"/>

        <TextView
                android:id="@+id/feed_refresh_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/feed_refresh_icon"
                android:layout_marginBottom="16dp"
                android:text="@string/refresh"
                android:textAlignment="center"
                android:textSize="32sp"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <include
            android:id="@+id/posts_none"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            layout="@layout/note_end_none" android:layout_marginBottom="32dp"/>

    <pl.itomaszjanik.test.NavigationController
            android:id="@+id/navigation_feed_top"
            android:layout_width="match_parent"
            android:layout_marginTop="56dp"
            android:layout_height="46dp"
            android:baselineAligned="false"
            android:background="@drawable/top_background"
            android:layout_gravity="top">

        <HorizontalScrollView
                android:id="@+id/top_horizontal_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:scrollbars="none">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:id="@+id/top_daily"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="16dp"
                        android:paddingStart="16dp"
                        android:paddingRight="8dp"
                        android:paddingEnd="8dp"
                        android:clipToPadding="false"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">

                    <pl.itomaszjanik.test.ExtendedComponents.TextViewClickable
                            android:id="@+id/top_daily_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/top_day"
                            android:textAlignment="center"
                            android:textSize="@dimen/top_category_text_size"
                            android:textColor="@color/colorTextActive"
                            android:clickable="false"
                    />

                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/top_weekly"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">

                    <pl.itomaszjanik.test.ExtendedComponents.TextViewClickable
                            android:id="@+id/top_weekly_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/top_week"
                            android:textAlignment="center"
                            android:textSize="@dimen/top_category_text_size"
                            android:textColor="@color/colorTextInactive"
                            android:clickable="false"
                    />

                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/top_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">

                    <pl.itomaszjanik.test.ExtendedComponents.TextViewClickable
                            android:id="@+id/top_monthly_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/top_month"
                            android:textAlignment="center"
                            android:textSize="@dimen/top_category_text_size"
                            android:textColor="@color/colorTextInactive"
                            android:clickable="false"
                    />

                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/top_alltime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">

                    <pl.itomaszjanik.test.ExtendedComponents.TextViewClickable
                            android:id="@+id/top_alltime_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/top_all"
                            android:textAlignment="center"
                            android:textSize="@dimen/top_category_text_size"
                            android:textColor="@color/colorTextInactive"
                            android:clickable="false"
                    />

                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/top_commented"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:paddingRight="16dp"
                        android:paddingEnd="16dp"
                        android:clipToPadding="false"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true">

                    <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:visibility="invisible"/>

                    <pl.itomaszjanik.test.ExtendedComponents.TextViewClickable
                            android:id="@+id/top_commented_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/top_comments"
                            android:textAlignment="center"
                            android:textSize="@dimen/top_category_text_size"
                            android:textColor="@color/colorTextInactive"
                            android:clickable="false"
                    />

                </RelativeLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </pl.itomaszjanik.test.NavigationController>

</RelativeLayout>

